--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/ejerciciospuente.js"></script>
+    <script src="js/arrays.js"></script>
 </body>
 </html>
