haciendo ejercicio 4 de codewars

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/objetos.js"></script>
+    <script src="js/ejercicioscodewars2.js"></script>
 </body>
 </html>
